tests/language_modules/17_math_module/valid/math_calls_inside_expressions.vf
module MathCallsInsideExpressions

procedure main()
is
    let total: Double = Math.sqrt(9.0) + Math.pow(2.0, 2.0)
    check total = 7.0
end main

end MathCallsInsideExpressions