tests/language_modules/17_math_module/invalid_semantics/math_argument_type.vf
module MathArgumentType

procedure main()
is
    let result_value: Double = Math.sin("zero")
    check result_value = 0.0
end main

end MathArgumentType